examples/test/testpolicy15741.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15741
  namespace: namespace343
spec:
  podSelector:
    matchLabels:
      key10: value14
      key38: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value46
          key24: value14
      podSelector:
        matchLabels:
          key10: value42
